# Olio-ohjelmointi-2026-viikkotehtavat-Daniel-Hyvarinen

./: .gitignore  README.md
viikkotehtavat/koeEsim1/: CMakeLists.txt  main.cpp
viikkotehtavat/koeEsim2/: CMakeLists.txt  elain.cpp  elain.h  koira.cpp  koira.h  main.cpp
viikkotehtavat/koeEsim3/: CMakeLists.txt  auto.h  main.cpp  moottori.h
viikkotehtavat/koeEsim4/: CMakeLists.txt  lista.cpp  lista.h  main.cpp  solmu.cpp  solmu.h
viikkotehtavat/pointteritesti/: CMakeLists.txt  mainwindow.ui
viikkotehtavat/untitled/: main.cpp
viikkotehtavat/viikko2esimerkki/: CMakeLists.txt  dht.cpp  dht.h  lcd.cpp  lcd.h  main.cpp  mittari.cpp  mittari.h  random.cpp  random.h
viikkotehtavat/viikko3esimerkki/: CMakeLists.txt  father.cpp  father.h  main.cpp  son.cpp  son.h
viikkotehtavat/viikko6esimerkki/: CMakeLists.txt  main.cpp  student.cpp  student.h
viikkotehtavat/viikko7esimerkki/: CMakeLists.txt  consumer.cpp  consumer.h  main.cpp
viikkotehtavat/viikko7esimerkki2/: CMakeLists.txt  mainwindow.ui
viikkotehtavat/viikkotehtava2/: game.cpp  game.h  main.cpp
viikkotehtavat/viikkotehtava3/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
viikkotehtavat/viikkotehtava4/: asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
viikkotehtavat/viikkotehtava6/: main.cpp  student.cpp  student.h
viikkotehtavat/viikkotehtava7/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
viikkotehtavat/viikkotehtava7_2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
viikkotehtavat/viikkotehtava8/: mainwindow.cpp  mainwindow.h  mainwindow.ui
viikkotehtavat/viikkotehtavat1/: CMakeLists.txt  main.cpp
